--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   playwright-mcp:
     build: .
-    ports:
-      - "8931:8931"
+    expose:
+      - "8931"
     restart: unless-stopped
     # Increase shared memory for Chrome stability
     shm_size: "1gb"
